# ImIn

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: latest-release_dispatch.yml  release_dispatch.yml
app/: color.json  main.py  pyproject.toml
app/assets/icons/app/: icon.icns
app/assets/licenses/: LICENSE_Bolt-for-Python  LICENSE_Ordered-Set  LICENSE_Python  LICENSE_keyring
app/db/sql/: 0000_create_users_table.sql  0001_insert_user.sql  0002_update_user_state.sql  0003_select_all_from_users_where_id.sql  0004_select_all_from_users_where_state.sql  0005_delete_from_users_where_id.sql
app/src/: app.py
app/src/components/views/: __init__.py  _app_info.py  _enter_exit_log.py  _entry_exit_log.py  _main.py  _oss_license.py  _register_tokens.py  _register_user.py
app/src/components/windows/: __init__.py  _enter_exit_log.py  _entry_exit_log.py  _nfc_wait.py  _register_user.py  _setup.py
app/src/core/: __init__.py  _core.py
app/src/utils/: __init__.py  _db.py  _utils.py  db.py  nfc.py  slack.py
docs/: SLACK_SETUP.md
